@@ -6,13 +6,17 @@ import com.ig.banking_system.dto.account.AccountViewDto;
 import com.ig.banking_system.dto.account.DepositReqDto;
 import com.ig.banking_system.dto.account.WithdrawalReqDto;
 import com.ig.banking_system.dto.enumerates.AccountTypeEnum;
+import com.ig.banking_system.dto.enumerates.TransactionTypeEnum;
+import com.ig.banking_system.dto.transactions.TransactionReqDto;
 import com.ig.banking_system.exceptions.ApiErrorException;
 import com.ig.banking_system.model.Account;
 import com.ig.banking_system.repositories.AccountRepository;
 import com.ig.banking_system.services.AccountService;
+import com.ig.banking_system.services.TransactionService;
 import com.ig.banking_system.utilities.shared.Helper;
 import jakarta.persistence.criteria.Predicate;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
@@ -27,11 +31,14 @@ import java.util.Objects;
 public class AccountServiceImpl implements AccountService {
 
 	private final AccountRepository accountRepository;
+	private final TransactionService transactionService;
 
+	@Transactional
 	@Override
 	public AccountViewDto registerAccount(Account req) {
 		// Auto generate account number
 		req.setAccountNumber(generateAccountNumber());
+		req.setBalance(BigDecimal.valueOf(50));
 		req.setActive(true);
 		final var account = accountRepository.save(req);
 		return account.toAccountView();
@@ -48,7 +55,7 @@ public class AccountServiceImpl implements AccountService {
 		return accountRepository.findAll((root, cq, cb) -> {
 			ArrayList<Predicate> predicates = new ArrayList<>();
 
-			if (!query.isBlank()) {
+			if (!StringUtils.isBlank(query)) {
 				var searchAccountHolder = cb.like(cb.upper(root.get("accountHolderName")), "%" + query.toUpperCase() + "%");
 				var searchAccountHolderEmail = cb.like(cb.upper(root.get("accountHolderEmail")), "%" + query.toUpperCase() + "%");
 				var searchAccountHolderPhone = cb.like(cb.upper(root.get("accountHolderPhone")), "%" + query.toUpperCase() + "%");
@@ -60,7 +67,7 @@ public class AccountServiceImpl implements AccountService {
 				predicates.add(cb.equal(root.get("accountType"), accountType));
 			}
 
-			if (!accountNumber.isBlank()) {
+			if (!StringUtils.isBlank(accountNumber)) {
 				predicates.add(cb.like(cb.upper(root.get("accountNumber")), "%" + accountNumber + "%"));
 			}
 
@@ -85,6 +92,11 @@ public class AccountServiceImpl implements AccountService {
 			throw new ApiErrorException(404, "Amount cannot be zero");
 		}
 		account.deposit(req.amount());
+		// Save to transaction
+		var depositTran = new TransactionReqDto(
+				null, TransactionTypeEnum.DEPOSIT, req.amount(), account.getAccountNumber(), null, null
+		);
+		transactionService.createTransaction(depositTran);
 		accountRepository.save(account);
 		return new MessageResponse();
 	}
@@ -94,16 +106,21 @@ public class AccountServiceImpl implements AccountService {
 	public MessageResponse withdrawal(WithdrawalReqDto req) {
 		final var account = accountRepository.findByAccountNumberAndStatusTrue(req.accountNumber()).orElseThrow(() -> new ApiErrorException(404, "Account not found"));
 		if (req.amount().compareTo(account.getBalance()) > 0) {
-			throw new ApiErrorException(404, "Insufficient balance");
+			throw new ApiErrorException(400, "Insufficient balance");
 		}
 		account.withdraw(req.amount());
+		// Save to transaction
+		var depositTran = new TransactionReqDto(
+				null, TransactionTypeEnum.WITHDRAWAL, req.amount(), account.getAccountNumber(), null, null
+		);
+		transactionService.createTransaction(depositTran);
 		accountRepository.save(account);
 		return new MessageResponse();
 	}
 
 	private String generateAccountNumber() {
 		var accountNumber = Helper.randomNumber(8);
-		if (accountRepository.existByAccountNumberAndStatusTrue(accountNumber)) {
+		if (accountRepository.existsByAccountNumberAndStatusTrue(accountNumber)) {
 			generateAccountNumber();
 		}
 		return accountNumber;
